# catena-actions

./: .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  Makefile  README.md  actions.code-workspace  app.py  dummy.py  package-lock.json  package.json  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS
.github/workflows/: build-node.yaml  deploy-cdk-static-site.yaml  deploy-cdk.yaml  pull-request.yaml  release.yaml  sast-scheduled.yaml  setup-node.yaml  setup-python.yaml  status-checks.yaml
actions/mintlify-changelog/: .dockerignore  Dockerfile  README.md  action.yaml  changelog-instructions.md  entrypoint.sh
actions/mintlify-update/: Dockerfile  README.md  action.yaml  entrypoint.sh
actions/open-pull-request/: README.md  action.yaml
actions/release/: Dockerfile  README.md  action.yaml  entrypoint.sh
composite/build-node/: README.md  action.yaml
composite/checkov/: README.md  action.yaml
composite/deploy-cdk/: README.md  action.yaml
composite/deploy-cdk-static-site/: README.md  action.yaml
composite/lint-python/: README.md  action.yaml
composite/open-pull-request/: README.md  action.yaml
composite/open-pull-request/templates/: WWHTDA.md
composite/release-protected-branch/: README.md  action.yaml
composite/sast-semgrep/: action.yaml
composite/setup-node/: README.md  action.yaml
composite/setup-python/: README copy.md  README.md  action.yaml
composite/test-python/: README.md  action.yaml
tests/: test_dummy.py
