[project]
name = "catena-actions"
version = "0.11.0"
description = "GitHub Actions and composite actions used by Catena"
authors = [{ name = "Catena", email = "tech@catenaclearing.io" }]
readme = "README.md"
keywords = ["github", "actions", "cicd", "pipeline", "github actions"]
requires-python = ">=3.12,<4.0"
dynamic = ["dependencies"]
urls = { Homepage = "https://catenaclearing.io" }

[tool.poetry]
package-mode = false

[tool.poetry.build]
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.12"
aws-cdk-lib = "^2.249.0"
catena-cdk-package = { git = "https://github.com/catenaclearing/catena-cdk-package", rev = "v0" }

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.15.10"
yamllint = "^1.38.0"
commitizen = "^4.13.9"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
pytest-xdist = { extras = ["psutil"], version = "^3.8.0" }

[tool.poetry.group.checkov]
optional = true

[tool.poetry.group.checkov.dependencies]
checkov = "^3.2.521"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.3.2"]

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "build",
    "dist",
    "site-packages",
    "venv",
    "**/cdk.out",
]

line-length = 135
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Choose the flake8 errors to ignore globally here
  "E501", # Line too long (using B950 instead, which has 10% tolerance)
  "D202", # No blank lines allowed after function docstring
  "D203", # No blank lines allowed before class docstring
  "D213", # Multi-line docstring summary should start at the second line
  "D400", # First line should end with a period
  "D415", # First line should end with a period, question mark, or exclamation point
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "ANN003", # Missing type annotation for **kwargs
  "ANN002", # Missing type annotation for **args
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
  "A002", # Argument `id` is shadowing a Python builtin
  "TD002", # Missing author in TODO
  "TD003", # Missing issue link for this TODO
  "COM812", # We don't need this rule because ruff formatting will handle this for us
  "B008", # Do not perform function calls in argument defaults
  "FBT001", # We are using default boolean args in several places and cannot change it without breaking the API
  "FBT002", # We are using default boolean args in several places and cannot change it without breaking the API
  "D107", # Missing docstring in __init__
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pylint]
max-args = 25

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"**/tests/**" = [
  "ANN", # Annotations
  "D", # Docstrings
  "INP001", #  File is part of an implicit namespace package. Add an `__init__.py`.
  "S101", # Use of `assert` detected. The enclosed code will be removed when compiling to optimised byte code.
  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
  "S105", # Possible hardcoded password
  "S106", # Possible hardcoded password
  "PLR0913", # fixtures are provided through arguments
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2
lines-between-types = 0

[tool.pytest.ini_options]
addopts = """
  --numprocesses=auto
  --dist=worksteal
  --maxprocesses=4
  -vv
  --cov
  --color=yes
  --cov-report=term
  --cov-report=xml
  --ignore=infra
  --ignore=cdk.out
  --ignore=database
"""
minversion = "8.3"

[tool.coverage.run]
omit = ["*/tests/*", "*/__init__.py", "*/*config.py"]    # Remove test files from coverage run.

[tool.commitizen]
tag_format = "v$version"
version_provider = "pep621"
