[project]
name = "catena-actions"
version = "0.11.1"
description = "GitHub Actions and composite actions used by Catena"
authors = [{ name = "Catena", email = "tech@catenaclearing.io" }]
readme = "README.md"
keywords = ["github", "actions", "cicd", "pipeline", "github actions"]
requires-python = ">=3.12,<4.0"
dynamic = ["dependencies"]
urls = { Homepage = "https://catenaclearing.io" }

[tool.poetry]
package-mode = false

[tool.poetry.build]
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.12"
catena-cdk-package = { git = "https://github.com/catenaclearing/catena-cdk-package", rev = "v0" }

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.15.11"
yamllint = "^1.38.0"
commitizen = "^4.13.9"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
pytest-xdist = { extras = ["psutil"], version = "^3.8.0" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"

[tool.poetry.group.checkov]
optional = true

[tool.poetry.group.checkov.dependencies]
checkov = "^3.2.521"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.3.2"]

# All the lint/format rules below should follow the minimum configuration defined by the team at:
# https://www.notion.so/catenaclearing/Linters-and-Formatters-33e64cb8bf2f8093a9e2d754a1aece1b
#
# Every time you make some change here check and/or update there so your change could be replicated
# in other projects.
#
# Some rules are marked as TBR (To Be Removed/Reviewed) because they are currently disabled, but we
# might want to enable them in the future. So write your code with that in mind to avoid future breaks.
[tool.ruff]
exclude = [
    ".git",
    ".cache",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "build",
    "dist",
    "site-packages",
    "**/cdk.out",
]

line-length = 135
indent-width = 4
target-version = "py312"  # TBR: py314

[tool.ruff.lint]
select = ["ALL"]  # ALL rules enabled by default
ignore = [        # EXCEPT the following
  "E501", # Line too long (using B950 instead, which has 10% tolerance)
  "D202", # No blank lines allowed after function docstring
  "D203", # No blank lines allowed before class docstring
  "D213", # Multi-line docstring summary should start at the second line
  "D400", # First line should end with a period
  "D415", # First line should end with a period, question mark, or exclamation point
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "ANN003", # (TBR) Missing type annotation for **kwargs
  "ANN002", # (TBR) Missing type annotation for **args
  "ANN401", # (TBR) Dynamically typed expressions (typing.Any) are disallowed
  "A002", # (TBR) Argument `id` is shadowing a Python builtin
  "FIX", # Allow TODO/FIXME/XXX/HACK comments
  "TD", # (TBR) Allow less-restricted TODO-like comments
  "COM812", # We don't need this rule because ruff formatting will handle this for us
  "B008", # (TBR) Do not perform function calls in argument defaults
  "FBT001", # (TBR) We are using default boolean args in several places and cannot change it without breaking the API
  "FBT002", # (TBR) We are using default boolean args in several places and cannot change it without breaking the API
  "D107", # (TBR) Missing docstring in __init__
]

fixable = ["ALL"]  # ALL fixes enabled
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pylint]
max-args = 25  # TBR: maximum of 10

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]  # allow unused imports for packages
"**/tests/**" = [  # Specific rules for tests
  "ANN", # Annotations
  "D", # Docstrings
  "INP001", #  File is part of an implicit namespace package. Add an `__init__.py`.
  "S101", # Use of `assert` detected. The enclosed code will be removed when compiling to optimised byte code.
  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
  "S105", # Possible hardcoded password
  "S106", # Possible hardcoded password
  "PLR0913", # fixtures are provided through arguments
]
"**/migrations/**" = [
  "PLR0915", # Too many statements
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2
lines-between-types = 0

[tool.commitizen]
tag_format = "$version"
version_provider = "pep621"

[tool.pytest.ini_options]
addopts = """
  --numprocesses=auto
  --dist=worksteal
  --maxprocesses=4
  -vv
  --cov
  --color=yes
  --cov-report=term
  --cov-report=xml
  --ignore=infra
  --ignore=cdk.out
"""
minversion = "8.3"
norecursedirs = [
  ".cache",
  "cdk.out",
  ".git",
  ".venv",
  "node_modules",
  "build",
  "dist",
  "__pycache__",
  ".mypy_cache",
]

[tool.coverage.run]
omit = ["*/tests/*", "*/__init__.py", "*/*config.py"]
